<resources>
    <string name="app_name">YBeBrightApp</string>
    <string name="product">Produk</string>
    <string name="agent">Keagenan</string>
    <string name="support">Support</string>
    <string name="news">Berita</string>
    <string name="menu">menu</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="how_to">Tentang</string>
    <string name="payment">Untuk pembayaran bisa langsung transfer ke nomor rek. berikut</string>
    <string name="pick_single">Please select your image</string>

    <string name="file_provider" translatable="false">com.example.ybebrightapp.fileprovider</string>

    <string name="lorem_ipsum">Untuk informasi Cara Order Produk dan Pendaftaran Keagenan, silahkan hubungi admin kami :
HP. 081393001500 / 0812-2626-5550 (WA Only)
atau klik tombol dibawah ini :</string>
    <string name="about1">YBe Bright merupakan salah satu produk unggulan Perusahaan CV. ESPANA CEMERLANG, yang bergerak di bidang penyediaan produk Kecantikan dan Skincare yang berkualitas dan bermutu tinggi.</string>
    <string name="about2">YBe Bright Healty And Natural adalah Skincare Berbasis Natural yang berguna untuk meningkatkan kesehatan kulit maupun penunjang kesehatan lainnya. Produk ini aman digunakan dalam jangka waktu Panjang, terutama untuk IBU hamil dan menyusui.</string>
    <string name="about3">Produk YBe Bright di produksi oleh pabrik yang berpengalaman di bidang Skincare Kosmetik dibawah pengawasan dokter kecantikan serta bersertifikat BPOM dan Halal.</string>
    <string name="about4">Kantor pusat kami berlokasi di Semarang dan kegiatan operasional kami meliputi seluruh Kota di Indonesia. Untuk rencana ke depan, wilayah opersional kami akan diperluas ke seluruh wilayah Asia.</string>
    <string name="p_jawa_bali">P. Jawa &amp; Bali</string>
    <string name="luar_jawa_bali">Luar P. Jawa &amp; Bali</string>

    <string-array name="product_name">
        <item>Brightening Glow</item>
        <item>Acne Glow</item>
        <item>Facial Wash</item>
        <item>Facial Wash Acne</item>
        <item>Day Cream</item>
        <item>Night Cream</item>
        <item>Serum Brightening</item>
        <item>Serum Acne</item>
        <item>Toner</item>
        <item>Refresh Face Cleansing</item>
    </string-array>

    <integer-array name="product_weight">
        <item>264</item>
        <item>213</item>
        <item>94</item>
        <item>90</item>
        <item>33</item>
        <item>31</item>
        <item>27</item>
        <item>25</item>
        <item>73</item>
        <item>126</item>
    </integer-array>

    <array name="product_image">
        <item>@drawable/foto_paketbg</item>
        <item>@drawable/foto_paketag</item>
        <item>@drawable/foto_facialwash</item>
        <item>@drawable/foto_facialwashacne</item>
        <item>@drawable/foto_daycream</item>
        <item>@drawable/foto_nightcream</item>
        <item>@drawable/foto_serumbrightening</item>
        <item>@drawable/foto_serumacne</item>
        <item>@drawable/foto_toner</item>
        <item>@drawable/foto_refresh</item>
    </array>

    <array name="slide">
        <item>@drawable/slide_dkter</item>
        <item>@drawable/slide_free</item>
        <item>@drawable/slide_hadir</item>
        <item>@drawable/slide_terlaris</item>
        <item>@drawable/slide_you</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>